@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: parse race-specific maps if they exist.
+Nicolas Weeger 2010-07-05
+
 Abort() on empty archetype name.
 Nicolas Weeger 2010-07-05
 
